--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Basic JavaScript Programming</title>
 </head>
 <body>
-    <h1>Ini contoh edit buat di github</h1>
+    <h1>Ini contoh edit buat di </h1>
 </body>
 
 <!-- <script src="js/index.js"></script> -->
