--- a/index.html
+++ b/index.html
@@ -11,8 +11,18 @@
 </body>
 
 <!-- <script src="js/index.js"></script> -->
-<script src="js/object.js"></script>
+<script src="js/array.js"></script>
 <script>
+    /*
+functions
+module
+    export 
+    import
+dom
+    querySelector()
+    event handling
+    asynchronous programming (async/await)
+    */
  
 </script>
 </html>
