function, object, modules

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </body>
 
 <!-- <script src="js/index.js"></script> -->
-<script src="js/array.js"></script>
+<script type="module" src="demoModule.js"></script>
 <script>
     /*
 functions
