element, event, parent and children node

--- a/DOM/index.html
+++ b/DOM/index.html
@@ -13,6 +13,7 @@
     <div id="main">
         <h2 class="sub-title">Add Prodi</h2>
 
+
         <form id="prodi-form">
             <input type="text" name="prodiName" id="prodi-name">
             <input type="text" name="prodiAbbr" id="prodi-abbr">
@@ -20,18 +21,23 @@
         </form>
 
         <h2 class="sub-title">List of Prodi</h2>
+        
         <ul id="prodi">
             <li class="list-item">Ilmu Filsafat/ FIL</li>
             <li class="list-item">Akuntansi / AKUN</li>
             <li class="list-item">Manajemen / MANA</li>
             <li class="list-item">Sistem Informasi / SI</li>
         </ul>
+
+        <p>List subject to change.</p>
+        <button id="buttonClick">Click Me</button>
+        
     </div>
 
     <footer id="footer">
         <p>Copyright 2021</p>
     </footer>
 
-    <script src="js/main.js"></script>
+    <script src="js/event.js"></script>
 </body>
 </html>
